untracked .meteor folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-	battleship/.meteor/.finished-upgraders
-	battleship/.meteor/.gitignore
-	battleship/.meteor/.id
-	battleship/.meteor/packages
-	battleship/.meteor/platforms
-	battleship/.meteor/release
-	battleship/.meteor/versions
+battleship/.meteor/*
